# uno_bot

./: .claude_settings.json  .gitignore  ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  CHAT_WIDGET_STYLING_TEST_REPORT.md  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRD_ENDPOINTS_TEST_REPORT.md  PROJECT_STATUS_SUMMARY.md  README.md  SESSION_39_SUMMARY.md  SESSION_43_SUMMARY.md  SESSION_44_SUMMARY.md  SESSION_45_SUMMARY.md  SESSION_46_SUMMARY.md  SESSION_47_SUMMARY.md  SESSION_48_SUMMARY.md  SESSION_49_SUMMARY.md  SESSION_57_SUMMARY.md  SESSION_58_SUMMARY.md  SESSION_59_SUMMARY.md  SESSION_60_SUMMARY.md  SESSION_60_SUMMARY_FINAL.md  SESSION_61_SUMMARY.md  SESSION_62_SUMMARY.md  SESSION_80_SUMMARY.md  SESSION_82_SUMMARY.md  SESSION_RESUME_TEST_DOCUMENTATION.md  SESSION_RESUME_TEST_REPORT.md  SESSION_SUMMARY.md  SESSION_SUMMARY_CURRENT.md  SESSION_SUMMARY_FEATURES_TESTED.md  TEST_SUITE_SUMMARY_REPORT.md  TODOLIST_MIDDLEWARE_QA_REPORT.md  ZUSTAND_STATE_MANAGEMENT_TEST_REPORT.md  admin_analytics_test_report.json  alembic.ini  analyze_prd.py  app_spec.txt  chat_widget_functional_report.json  chat_widget_functional_report_updated.json  (+100 more)
.qa-cache/: lint.json  typecheck.json
client/: .eslintrc.js  SESSION_SUMMARY.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  start_frontend.py  tailwind.config.js  test_zustand_simple.py  vite.config.ts
migrations/: env.py
qa-reports/: feature-0-2026-01-02-13-30-38.json  feature-1-2026-01-02-13-30-38.json  feature-10-2026-01-02-13-30-38.json  feature-100-2026-01-02-13-30-40.json  feature-101-2026-01-02-13-30-40.json  feature-102-2026-01-02-13-30-40.json  feature-103-2026-01-02-13-30-40.json  feature-104-2026-01-02-13-30-40.json  feature-105-2026-01-02-13-30-40.json  feature-106-2026-01-02-13-30-40.json  feature-107-2026-01-02-13-30-40.json  feature-108-2026-01-02-13-30-40.json  feature-109-2026-01-02-13-30-40.json  feature-11-2026-01-02-13-30-38.json  feature-110-2026-01-02-13-30-40.json  feature-111-2026-01-02-13-30-40.json  feature-112-2026-01-02-13-30-40.json  feature-113-2026-01-02-13-30-40.json  feature-114-2026-01-02-13-30-40.json  feature-115-2026-01-02-13-30-40.json  feature-116-2026-01-02-13-30-40.json  feature-117-2026-01-02-13-30-40.json  feature-118-2026-01-02-13-30-40.json  feature-119-2026-01-02-13-30-40.json  feature-12-2026-01-02-13-30-38.json  feature-120-2026-01-02-13-30-40.json  feature-121-2026-01-02-13-30-40.json  feature-122-2026-01-02-13-30-40.json  feature-123-2026-01-02-13-30-40.json  feature-124-2026-01-02-13-30-40.json  feature-125-2026-01-02-13-30-40.json  feature-126-2026-01-02-13-30-40.json  feature-127-2026-01-02-13-30-40.json  feature-128-2026-01-02-13-30-40.json  feature-129-2026-01-02-13-30-40.json  feature-13-2026-01-02-13-30-38.json  (+169 more)
reports/: session_13_summary.md
(+251 files in other folders)
